Spacing fixes

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -31,6 +31,7 @@
 
     --site-content-width: 50rem;
     --site-content-spacing: 2rem;
+    --site-content-edge: 0.5rem;
 }
 
 @media screen and (max-width: 400px) {
